# media-organizer

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/organizer/: collector.rs  media.rs  media_organizer.rs  mod.rs  printer.rs
