[package]
name = "media-organizer"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
rayon = "1.6.1"
chrono = "0.4.23"
walkdir = "2.3.2"
colored = "2.0.0"
pretty_assertions = "1.3.0"
